--- a/src/main/webapp/app/layouts/main/main.component.html
+++ b/src/main/webapp/app/layouts/main/main.component.html
@@ -1,4 +1,4 @@
-<jhi-page-ribbon></jhi-page-ribbon>
+<!--<jhi-page-ribbon></jhi-page-ribbon>-->
 <div>
     <router-outlet name="navbar"></router-outlet>
 </div>
@@ -6,5 +6,5 @@
     <div class="card jh-card">
         <router-outlet></router-outlet>
     </div>
-    <jhi-footer></jhi-footer>
+    <!--<jhi-footer></jhi-footer>-->
 </div>
