cập nhật nội dung view

--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -35,7 +35,7 @@
 
                         <div class="row form-group">
                             <div class="col-md-12 mb-3 mb-md-0">
-                                <label class="font-weight-bold" for="fullname">Full Name</label>
+                                <label class="font-weight-bold" for="fullname">Họ và tên</label>
                                 <input type="text" id="fullname" class="form-control" placeholder="Full Name">
                             </div>
                         </div>
@@ -49,14 +49,14 @@
 
                         <div class="row form-group">
                             <div class="col-md-12 mb-3 mb-md-0">
-                                <label class="font-weight-bold" for="phone">Phone</label>
+                                <label class="font-weight-bold" for="phone">Số điện thoại</label>
                                 <input type="text" id="phone" class="form-control" placeholder="Phone #">
                             </div>
                         </div>
 
                         <div class="row form-group">
                             <div class="col-md-12">
-                                <label class="font-weight-bold" for="message">Message</label>
+                                <label class="font-weight-bold" for="message">Tin nhắn</label>
                                 <textarea name="message" id="message" cols="30" rows="5" class="form-control" placeholder="Say hello to us"></textarea>
                             </div>
                         </div>
@@ -73,21 +73,24 @@
 
                 <div class="col-lg-4">
                     <div class="p-4 mb-3 bg-white">
-                        <h3 class="h5 text-black mb-3">Contact Info</h3>
-                        <p class="mb-0 font-weight-bold">Address</p>
-                        <p class="mb-4">203 Fake St. Mountain View, San Francisco, California, USA</p>
+                        <h3 class="h5 text-black mb-3">Thông tin liên hệ</h3>
+                        <p class="mb-0 font-weight-bold">Địa chỉ</p>
+                        <p class="mb-4">Số 8, Tôn thất thuyết, Cầu giấy, Hà nội</p>
 
-                        <p class="mb-0 font-weight-bold">Phone</p>
+                        <p class="mb-0 font-weight-bold">Số điện thoại</p>
                         <p class="mb-4"><a href="#">+1 232 3235 324</a></p>
 
-                        <p class="mb-0 font-weight-bold">Email Address</p>
+                        <p class="mb-0 font-weight-bold">Địa chỉ EMail</p>
                         <p class="mb-0"><a href="#">youremail@domain.com</a></p>
 
                     </div>
 
                     <div class="p-4 mb-3 bg-white">
-                        <h3 class="h5 text-black mb-3">More Info</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa ad iure porro mollitia architecto hic consequuntur. Distinctio nisi perferendis dolore, ipsa consectetur? Fugiat quaerat eos qui, libero neque sed nulla.</p>
+                        <h3 class="h5 text-black mb-3">Thông tin khác</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa ad iure porro mollitia architecto hic consequuntur. Distinctio nisi p
+						erferendis dolore, 
+						ipsa consectetur? Fugiat quaerat eos qui, libero neque sed nulla.
+						TaskRabbit, one of the biggest players in the gig economy where people offer their time and services as housecleaners, movers, furniture assemblers...</p>
                         <p><a href="#" class="btn btn-primary px-4 py-2 text-white pill">Learn More</a></p>
                     </div>
                 </div>
