--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <title th:text="#{home.title}">Tìm công việc, uy tín, nhanh với TaskUnite</title>
     <th:block th:replace="fragment/layout :: head"></th:block>
@@ -22,7 +22,7 @@
             <div class="row align-items-center">
                 <div class="col-12 text-center" data-aos="fade">
                     <h1 class="mb-5">Không cần tự tay hoàn thành công việc</h1>
-                    <a th:href="@{/task/create/step1}" class="bg-primary text-white py-4 px-4 rounded text-uppercase">
+                    <a sec:authorize="isAuthenticated()" th:href="@{/task/create/step1}" class="bg-primary text-white py-4 px-4 rounded text-uppercase">
                         Đăng việc ngay
                     </a>
                 </div>
@@ -117,122 +117,122 @@
         </div>
     </div>
 
-    <div class="site-section bg-light">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 mb-5 mb-md-0" data-aos="fade-up" data-aos-delay="100">
-                    <h2 class="mb-5 h3" th:text="#{home.recent-job}">Công Việc Mới</h2>
-                    <div class="rounded border jobs-wrap">
-                        <a href="job-single.html"
-                           class="job-item d-block d-md-flex align-items-center  border-bottom fulltime">
-                            <div class="company-logo blank-logo text-center text-md-left pl-3">
-                                <img th:src="@{~/images/company_logo_blank.png}" alt="Avatar master"
-                                     class="img-fluid mx-auto">
-                            </div>
-                            <div class="job-details h-100">
-                                <div class="p-3 align-self-center">
-                                    <h3>Chuyển nhà sinh viên</h3>
-                                    <div class="d-block d-lg-flex">
-                                        <div class="mr-3">
-                                            <span class="icon-user mr-1 text-purple"></span> Ng. Công
-                                        </div>
-                                        <div class="mr-3">
-                                            <span class="icon-room mr-1 text-pink"></span>
-                                            Phúc Diễn, Từ Liêm, Hà Nội
-                                        </div>
-                                        <div class="job-des-preview"
-                                             th:title="'Công việc nhẹ nhàng! Lương ko phải nghĩ!'">
-                                            <span class="icon-file-text mr-1 text-secondary"></span>
-                                            Dọn đồ, chuyển đồ đến nơi mới Xuân Thuỷ, Cầu Giấy.
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="job-category align-self-center">
-                                <div class="p-3">
-                                    <span class="text-info p-2 pl-4 pr-4 rounded border border-info">Apply</span>
-                                </div>
-                            </div>
-                        </a>
-                        <a href="job-single.html"
-                           class="job-item d-block d-md-flex align-items-center  border-bottom fulltime">
-                            <div class="company-logo blank-logo text-center text-md-left pl-3">
-                                <img th:src="@{~/images/company_logo_blank.png}" alt="Avatar master"
-                                     class="img-fluid mx-auto">
-                            </div>
-                            <div class="job-details h-100">
-                                <div class="p-3 align-self-center">
-                                    <h3>Chuyển văn thư</h3>
-                                    <div class="d-block d-lg-flex">
-                                        <div class="mr-3">
-                                            <span class="icon-user mr-1 text-purple"></span> Ms. Thu
-                                        </div>
-                                        <div class="mr-3">
-                                            <span class="icon-room mr-1 text-pink"></span>
-                                            Hoàn Kiếm, Hà Nội.
-                                        </div>
-                                        <div class="job-des-preview"
-                                             th:title="'Công việc nhẹ nhàng! Lương ko phải nghĩ!'">
-                                            <span class="icon-file-text mr-1 text-secondary"></span>
-                                            Chuyển 2 thư qua Hai Bà Trưng, Hà Nội.
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="job-category align-self-center">
-                                <div class="p-3">
-                                    <span class="text-info p-2 pl-4 pr-4 rounded border border-info">Apply</span>
-                                </div>
-                            </div>
-                        </a>
-                        <a href="job-single.html"
-                           class="job-item d-block d-md-flex align-items-center  border-bottom fulltime">
-                            <div class="company-logo blank-logo text-center text-md-left pl-3">
-                                <img th:src="@{~/images/company_logo_blank.png}" alt="Avatar master"
-                                     class="img-fluid mx-auto">
-                            </div>
-                            <div class="job-details h-100">
-                                <div class="p-3 align-self-center">
-                                    <h3>Dọn nhà Riêng</h3>
-                                    <div class="d-block d-lg-flex">
-                                        <div class="mr-3">
-                                            <span class="icon-user mr-1 text-purple"></span> Mr. Cương
-                                        </div>
-                                        <div class="mr-3">
-                                            <span class="icon-room mr-1 text-pink"></span>
-                                            Ba Đình, Hà Nội
-                                        </div>
-                                        <div class="job-des-preview"
-                                             th:title="'Công việc nhẹ nhàng! Lương ko phải nghĩ!'">
-                                            <span class="icon-file-text mr-1 text-secondary"></span>
-                                            Dọn dẹp lau sàn nhà 3 tầng, lau của kính 4 phòng.
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="job-category align-self-center">
-                                <div class="p-3">
-                                    <span class="text-info p-2 pl-4 pr-4 rounded border border-info">Apply</span>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-md-12 text-center mt-5">
-                        <a href="#" class="btn-svg-UI btn-reset-css fill-green">
-                            <svg>
-                                <rect></rect>
-                            </svg>
-                            <span>
-                                <span class="icon-plus-circle"></span> <span  th:text="#{home.show-more}"></span>
-                            </span>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+<!--    <div class="site-section bg-light">-->
+<!--        <div class="container">-->
+<!--            <div class="row">-->
+<!--                <div class="col-md-12 mb-5 mb-md-0" data-aos="fade-up" data-aos-delay="100">-->
+<!--                    <h2 class="mb-5 h3" th:text="#{home.recent-job}">Công Việc Mới</h2>-->
+<!--                    <div class="rounded border jobs-wrap">-->
+<!--                        <a href="job-single.html"-->
+<!--                           class="job-item d-block d-md-flex align-items-center  border-bottom fulltime">-->
+<!--                            <div class="company-logo blank-logo text-center text-md-left pl-3">-->
+<!--                                <img th:src="@{~/images/company_logo_blank.png}" alt="Avatar master"-->
+<!--                                     class="img-fluid mx-auto">-->
+<!--                            </div>-->
+<!--                            <div class="job-details h-100">-->
+<!--                                <div class="p-3 align-self-center">-->
+<!--                                    <h3>Chuyển nhà sinh viên</h3>-->
+<!--                                    <div class="d-block d-lg-flex">-->
+<!--                                        <div class="mr-3">-->
+<!--                                            <span class="icon-user mr-1 text-purple"></span> Ng. Công-->
+<!--                                        </div>-->
+<!--                                        <div class="mr-3">-->
+<!--                                            <span class="icon-room mr-1 text-pink"></span>-->
+<!--                                            Phúc Diễn, Từ Liêm, Hà Nội-->
+<!--                                        </div>-->
+<!--                                        <div class="job-des-preview"-->
+<!--                                             th:title="'Công việc nhẹ nhàng! Lương ko phải nghĩ!'">-->
+<!--                                            <span class="icon-file-text mr-1 text-secondary"></span>-->
+<!--                                            Dọn đồ, chuyển đồ đến nơi mới Xuân Thuỷ, Cầu Giấy.-->
+<!--                                        </div>-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                            <div class="job-category align-self-center">-->
+<!--                                <div class="p-3">-->
+<!--                                    <span class="text-info p-2 pl-4 pr-4 rounded border border-info">Apply</span>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </a>-->
+<!--                        <a href="job-single.html"-->
+<!--                           class="job-item d-block d-md-flex align-items-center  border-bottom fulltime">-->
+<!--                            <div class="company-logo blank-logo text-center text-md-left pl-3">-->
+<!--                                <img th:src="@{~/images/company_logo_blank.png}" alt="Avatar master"-->
+<!--                                     class="img-fluid mx-auto">-->
+<!--                            </div>-->
+<!--                            <div class="job-details h-100">-->
+<!--                                <div class="p-3 align-self-center">-->
+<!--                                    <h3>Chuyển văn thư</h3>-->
+<!--                                    <div class="d-block d-lg-flex">-->
+<!--                                        <div class="mr-3">-->
+<!--                                            <span class="icon-user mr-1 text-purple"></span> Ms. Thu-->
+<!--                                        </div>-->
+<!--                                        <div class="mr-3">-->
+<!--                                            <span class="icon-room mr-1 text-pink"></span>-->
+<!--                                            Hoàn Kiếm, Hà Nội.-->
+<!--                                        </div>-->
+<!--                                        <div class="job-des-preview"-->
+<!--                                             th:title="'Công việc nhẹ nhàng! Lương ko phải nghĩ!'">-->
+<!--                                            <span class="icon-file-text mr-1 text-secondary"></span>-->
+<!--                                            Chuyển 2 thư qua Hai Bà Trưng, Hà Nội.-->
+<!--                                        </div>-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                            <div class="job-category align-self-center">-->
+<!--                                <div class="p-3">-->
+<!--                                    <span class="text-info p-2 pl-4 pr-4 rounded border border-info">Apply</span>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </a>-->
+<!--                        <a href="job-single.html"-->
+<!--                           class="job-item d-block d-md-flex align-items-center  border-bottom fulltime">-->
+<!--                            <div class="company-logo blank-logo text-center text-md-left pl-3">-->
+<!--                                <img th:src="@{~/images/company_logo_blank.png}" alt="Avatar master"-->
+<!--                                     class="img-fluid mx-auto">-->
+<!--                            </div>-->
+<!--                            <div class="job-details h-100">-->
+<!--                                <div class="p-3 align-self-center">-->
+<!--                                    <h3>Dọn nhà Riêng</h3>-->
+<!--                                    <div class="d-block d-lg-flex">-->
+<!--                                        <div class="mr-3">-->
+<!--                                            <span class="icon-user mr-1 text-purple"></span> Mr. Cương-->
+<!--                                        </div>-->
+<!--                                        <div class="mr-3">-->
+<!--                                            <span class="icon-room mr-1 text-pink"></span>-->
+<!--                                            Ba Đình, Hà Nội-->
+<!--                                        </div>-->
+<!--                                        <div class="job-des-preview"-->
+<!--                                             th:title="'Công việc nhẹ nhàng! Lương ko phải nghĩ!'">-->
+<!--                                            <span class="icon-file-text mr-1 text-secondary"></span>-->
+<!--                                            Dọn dẹp lau sàn nhà 3 tầng, lau của kính 4 phòng.-->
+<!--                                        </div>-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                            <div class="job-category align-self-center">-->
+<!--                                <div class="p-3">-->
+<!--                                    <span class="text-info p-2 pl-4 pr-4 rounded border border-info">Apply</span>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </a>-->
+<!--                    </div>-->
+<!--                    <div class="col-md-12 text-center mt-5">-->
+<!--                        <a href="#" class="btn-svg-UI btn-reset-css fill-green">-->
+<!--                            <svg>-->
+<!--                                <rect></rect>-->
+<!--                            </svg>-->
+<!--                            <span>-->
+<!--                                <span class="icon-plus-circle"></span> <span  th:text="#{home.show-more}"></span>-->
+<!--                            </span>-->
+<!--                        </a>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
 
-    <div class="site-section" data-aos="fade">
+    <div class="site-section bg-light" data-aos="fade">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6 mb-5 mb-md-0">
@@ -264,7 +264,7 @@
         <div class="container">
             <div class="row align-items-center justify-content-center">
                 <div class="col-md-6 text-center" data-aos="fade">
-                    <h2 class="mb-4 text-white">Kiếm thêm thu nhập với những công việc đơn giản</h2>
+                    <h4 class="mb-5 text-white">Hãy cống hiến bằng những việc đơn giản</h4>
                     <a href="#" class="bg-warning text-white py-3 px-4 rounded text-uppercase">
                         Trở thành Tasker
                     </a>
@@ -325,7 +325,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 mx-auto text-center mb-5 section-heading">
-                    <h2>Recent Blog</h2>
+                    <h2>Thực tiễn</h2>
                 </div>
             </div>
             <div class="nonloop-block-15 owl-carousel">
@@ -336,7 +336,7 @@
                         </a>
                     </div>
                     <h2 class="heading mb-0 h5"><a href="#">Dọn dẹp nhà cửa thật đơn giản</a></h2>
-                    <span class="mb-3 d-block post-date">January 20, 2018 &bullet; By <a href="#">Josh Holmes</a></span>
+                    <span class="mb-3 d-block post-date">January 24, 2020 &bullet; By <a href="#">Alesson Backer</a></span>
                     <p>Dọn dẹp nhà cửa thật sự rất vất vả và tốn thời gian. Nhờ sự trợ giúp của các Tasker, tôi đã có thêm thời gian cho những sở thích cá nhân</p>
                 </div>
                 <div class="media-with-text">
@@ -346,7 +346,7 @@
                         </a>
                     </div>
                     <h2 class="heading mb-0 h5"><a href="#">Sửa TV trong vòng vài nốt nhạc</a></h2>
-                    <span class="mb-3 d-block post-date">January 20, 2018 &bullet; By <a href="#">Josh Holmes</a></span>
+                    <span class="mb-3 d-block post-date">December 10th, 2019 &bullet; By <a href="#">Marcus Rojoo</a></span>
                     <p>Tôi đang xem đội tuyển Việt Nam đá thì TV bị hỏng. Rất may có một Tasker đã sửa được TV và tôi không bỏ lỡ bàn thắng nào. Cảm ơn TaskUnite</p>
                 </div>
                 <div class="media-with-text">
@@ -356,7 +356,7 @@
                         </a>
                     </div>
                     <h2 class="heading mb-0 h5"><a href="#">Mua sắm thật tiện lợi</a></h2>
-                    <span class="mb-3 d-block post-date">January 20, 2018 &bullet; By <a href="#">Josh Holmes</a></span>
+                    <span class="mb-3 d-block post-date">December 2nd, 2019 &bullet; By <a href="#">Lional Messie</a></span>
                     <p>
                         Tôi thường làm việc từ sáng đến tối nên không có nhiều thời gian để đi mua sắm. Nhờ có các
                         Tasker đáng tin cậy,
