--- a/src/main/resources/templates/task/create/step2.html
+++ b/src/main/resources/templates/task/create/step2.html
@@ -16,127 +16,7 @@
     <div class="site-section bg-light">
         <div class="container">
             <div class="row">
-                <div class="col-md-12 col-lg-4 p-2 box-filter">
-                    <div class="recommendations__trust-safety__box panel panel--spaced ">
-                        <img class="recommendations__trust-safety__box__icon"
-                             th:src="@{~/images/protected.svg}" alt="shield">
-                        <div class="recommendations__trust-safety__box__text">
-                            <span th:text="#{task-create.step2.notification-2}"></span>
-                        </div>
-                    </div>
-                    <div class="panel panel--spaced panel--with-overflow">
-                        <div class="title-date text-uppercase text-bold">
-                            <span class="icon-calendar mr-2"></span>
-                            <span th:text="#{task-create.step2.task-date}"></span>
-                            <span class="icon-chevron-up iconSlideUp"></span>
-                        </div>
-                        <div class="box-option mt-3">
-                            <div class="option-date">
-                                <button type="button" class="active"
-                                        th:text="#{task-create.step2.task-date-today}"></button>
-                            </div>
-                            <div class="option-date">
-                                <button type="button" class=""
-                                        th:text="#{task-create.step2.task-date-within3days}"></button>
-                            </div>
-                            <div class="option-date">
-                                <button type="button" class=""
-                                        th:text="#{task-create.step2.task-date-withinaweek}"></button>
-                            </div>
-                            <div class="option-date">
-                                <button type="button" class=""
-                                        th:text="#{task-create.step2.task-date-choosedates}"></button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="panel panel--spaced panel--with-overflow">
-                        <div class="title-date text-uppercase text-bold">
-                            <span class="icon-clock-o mr-2"> </span> <span th:text="#{task-create.step2.task-time}"></span>
-                            <span class="icon-chevron-up iconSlideUp"></span>
-                        </div>
-                        <div class="mt-3">
-                            <div class="custom-control custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" id="time1"
-                                       value="8-12">
-                                <label class="custom-control-label d-inline" for="time1"
-                                       th:text="#{task-create.step2.task-time-morning}"></label>
-                            </div>
-                            <div class="custom-control custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" id="time2"
-                                       value="12-17">
-                                <label class="custom-control-label d-inline" for="time2"
-                                       th:text="#{task-create.step2.task-time-afternoon}"></label>
-                            </div>
-                            <div class="custom-control custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" id="time3"
-                                       value="17-21">
-                                <label class="custom-control-label d-inline" for="time3"
-                                       th:text="#{task-create.step2.task-time-evening}"></label>
-                            </div>
-                            <div class="row my-2 p-3">
-                                <div class="col-lg-3 p-0 col-xs-1">
-                                    <div class="h-20 line-mid">
-                                        <div class="line"></div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-6 text-center p-0 col-xs-10">
-                                    <div class="h-20" style="font-size: 13px; color: #3f3f3f"
-                                         th:text="#{task-create.step2.task-time-choose-a-specific-time}">s
-                                    </div>
-                                </div>
-                                <div class="col-lg-3 p-0 col-xs-1">
-                                    <div class="h-20 line-mid">
-                                        <div class="line"></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <select class="form-control">
-                                    <option value="0" th:text="#{task-create.step2.task-flexible}"></option>
-                                    <option value="1">8:00am</option>
-                                    <option value="2">8:30am</option>
-                                    <option value="3">9:00am</option>
-                                    <option value="4">9:30am</option>
-                                    <option value="5">10:00am</option>
-                                    <option value="6">10:30am</option>
-                                    <option value="7">11:00am</option>
-                                    <option value="8">11:30am</option>
-                                    <option value="9">12:00pm</option>
-                                    <option value="10">12:30pm</option>
-                                    <option value="11">1:00pm</option>
-                                    <option value="12">1:30pm</option>
-                                    <option value="13">2:00pm</option>
-                                    <option value="14">2:30pm</option>
-                                    <option value="15">3:00pm</option>
-                                    <option value="16">3:30pm</option>
-                                    <option value="17">4:00pm</option>
-                                    <option value="18">4:30pm</option>
-                                    <option value="19">5:00pm</option>
-                                    <option value="20">5:30pm</option>
-                                    <option value="21">6:00pm</option>
-                                    <option value="22">6:30pm</option>
-                                    <option value="23">7:00pm</option>
-                                    <option value="24">7:30pm</option>
-                                    <option value="25">8:00pm</option>
-                                    <option value="26">8:30pm</option>
-                                    <option value="27">9:00pm</option>
-                                    <option value="28">9:30pm</option>
-                                </select>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-12 col-lg-8 p-2">
-                    <div class="row">
-                        <div class="col-lg-12 col-md-12 text-right">
-                            <label class="text-uppercase mr-1" th:text="#{task-create.step2.sorted-by}"></label>
-                            <select class="filter-option">
-                                <option value="0" selected th:text="#{task-create.step2.sorted-by-recommended}"></option>
-                                <option value="1" th:text="#{task-create.step2.sorted-by-price-lowest-to-highest}"></option>
-                                <option value="2" th:text="#{task-create.step2.sorted-by-price-highest-to-lowest}"></option>
-                            </select>
-                        </div>
-                    </div>
+                <div class="col-md-12">
                     <th:block th:each="tasker, iter: ${taskers}">
                         <div class="recommendations__result panel panel--spaced ">
                             <div class="recommendations__result-figure">
@@ -150,19 +30,13 @@
                                         <input type="hidden" id="tasker" name="tasker" th:value="${tasker.id}">
                                         <input type="hidden" id="price" name="price" th:value="${prices.get(iter.index)}">
 
-                                        <button type="submit" class="btn-reset-css btn-svg-UI fill-green mt-2">
+                                        <button type="submit" class="btn-reset-css btn-svg-UI fill-green mt-3">
                                             <svg>
                                                 <rect></rect>
                                             </svg>
                                             <span>Chọn</span>
                                         </button>
                                     </form>
-
-                                    <div class="u-hidden--sm">
-                                    <span class="whisper">
-                                        <span th:text="#{task-create.step2.notification-3}"></span>
-                                    </span>
-                                    </div>
                                 </div>
                             </div>
                             <div class="recommendations__result-content">
@@ -218,15 +92,14 @@
 <!--                                    </div>-->
 <!--                                </div>-->
                                 <div class="recommendations__result-actions view-mobile">
-                                    <a class="recommendations__hire-btn btn btn-primary btn-block "
-                                       th:href="@{/task/create/step3}">
-                                        <span th:text="#{task-create.step2.select-continue-btn}"></span>
-                                    </a>
-                                    <div class="u-hidden--sm">
-                                    <span class="whisper">
-                                        <span th:text="#{task-create.step2.notification-3}"></span>
-                                    </span>
-                                    </div>
+                                    <form th:action="@{/task/create/step2}" method="post">
+                                        <input type="hidden" id="tasker" name="tasker" th:value="${tasker.id}">
+                                        <input type="hidden" id="price" name="price" th:value="${prices.get(iter.index)}">
+
+                                        <button type="submit" class="recommendations__hire-btn btn btn-primary btn-block mt-3">
+                                            <span>Chọn</span>
+                                        </button>
+                                    </form>
                                 </div>
                             </div>
                         </div>
