--- a/src/main/resources/templates/task/room/room.html
+++ b/src/main/resources/templates/task/room/room.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta http-equiv="Content-Security-Policy"
-          content="default-src *; style-src 'self' http://* 'unsafe-inline'; script-src 'self' http://* 'unsafe-inline' 'unsafe-eval'"/>
     <title>Thông tin công việc</title>
     <th:block th:include="fragment/layout :: head"></th:block>
     <link rel="stylesheet" th:href="@{~/css/task/create.css}">
@@ -19,30 +17,20 @@
     <div class="site-section bg-light">
         <div class="container">
             <div class="row">
-                <div class="col-md-12 col-lg-7 ">
-                    <div class="panel panel--spaced panel--with-overflow">
-                        <div class="row">
-                            <div class="col-lg-12">
-                                <div id="chat" style="width: 100%; height: 400px;">
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-12 col-lg-5">
+                <div class="col-md-12 text-center">
                     <div class="panel panel--spaced panel--with-overflow">
                         <div class="row">
                             <div class="col-lg-6 col-12">
-                                <img th:src="${task.getTasker().getImage()}" alt="" style="width: 60px; height: 60px; object-fit: cover; position: absolute; ">
+                                <img th:src="${task.getTasker().getImage()}" alt=""
+                                     style="width: 60px; height: 60px; object-fit: cover; position: absolute; ">
                             </div>
-                            <div class="col-lg-6 col-12 text-right">
+                            <div class="col-lg-6 col-12">
                                 <div class="task-name text-bold" style="font-size: 18px">
                                     <div th:title="'Công việc nhà'" class="name" th:text="${task.getName()}"></div>
                                 </div>
                                 <div class="tasker-name mt-1"
                                      th:text="${task.getTasker().getUser().getLastName() + ' ' + task.getTasker().getUser().getFirstName()}">
-                                    Trần Hiểu Đông
+
                                 </div>
                             </div>
                         </div>
@@ -65,21 +53,19 @@
                                 <span class="icon-chevron-down iconSlideUp roomTask"></span>
                                 <label class="font-weight-bold">Chi tiết công việc</label>
                                 <div class="box-option mt-3 row">
-                                    <div class="col-12">
-                                        <i class="icon-phone t-green mr-lg-1"></i>
-                                        <label class="font-weight-bold">Số điện thoại</label>
-                                        <div class="mt-1 row">
-                                            <div class="col-lg-6">Tasker:</div>
-                                            <div class="col-lg-6 text-right">
-                                                <span th:text="${task.getTasker().getPhone()}"></span>
-                                            </div>
+                                    <div class="col-12 mb-3">
+                                        <i class="icon-details t-green mr-lg-1"></i>
+                                        <label class="font-weight-bold">Danh mục</label>
+                                        <div class="mt-1">
+                                            <span th:text="${task.getTaskCategory().getName()}">
+                                            </span>
                                         </div>
                                     </div>
-                                    <div class="col-12">
+                                    <div class="col-12 mb-3">
                                         <i class="icon-details t-green mr-lg-1"></i>
                                         <label class="font-weight-bold">Mô tả</label>
                                         <div class="mt-1">
-                                            <span th:text="${task.description}">
+                                            <span th:text="${task.getDescription()}">
                                             </span>
                                         </div>
                                     </div>
@@ -89,25 +75,72 @@
                         <div style="height: 1px;background: #dadada" class="my-3"></div>
                         <div class="row">
                             <div class="col-lg-6">
-                                <label class="font-weight-bold">Giá tiền (vnđ/giờ):</label>
+                                <label class="font-weight-bold">Giá tiền (VND/giờ):</label>
                             </div>
-                            <div class="col-lg-6 text-right t-20 t-green">
+                            <div class="col-lg-6 t-20 t-green">
                                 <span
                                     th:text="${#numbers.formatDecimal(task.getPrice(), 0, 'COMMA', 0, 'POINT')}"></span><span> VND/giờ</span>
                             </div>
                         </div>
+                        <div th:if="${task.getTotalPrice() != null}">
                         <div style="height: 1px;background: #dadada" class="my-3"></div>
-                        <div class="row mb-3">
-                            <div class="col-12 text-center">
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <label class="font-weight-bold">Tổng trả (VND):</label>
+                            </div>
+                            <div class="col-lg-6 t-20 t-green">
                                 <span
-                                    class="ml-lg-3 badge badge-info text-white text-bold p-2"
-                                    th:text="${task.getStatus()}"></span>
+                                    th:text="${#numbers.formatDecimal(task.getTotalPrice(), 0, 'COMMA', 0, 'POINT')}"></span><span> VND</span>
                             </div>
                         </div>
+                        </div>
+                        <div style="height: 1px;background: #dadada" class="my-3"></div>
                         <div class="row mb-3">
-                            <div class="col-lg-12 text-center my-4">
-                                <button type="button" class="btn-task-done btn-primary btn px-5 py-3 text-uppercase">
-                                    Hoàn thành công việc
+                            <div class="col-12 text-center" th:switch="${task.getStatus()}">
+                                <span
+                                    class="badge badge-secondary text-white text-bold p-3 t-20"
+                                    th:case="0">Chờ Tasker xác nhận</span>
+                                <span
+                                    class="badge badge-warning text-white text-bold p-3 t-20"
+                                    th:case="1">Tasker đã xác nhận</span>
+                                <span
+                                    class="badge badge-info text-white text-bold p-3 t-20"
+                                    th:case="2">Tasker đã hoàn thành công việc</span>
+                                <span
+                                    class="badge badge-success text-white text-bold p-3 t-20"
+                                    th:case="3">Công việc hoàn thành</span>
+                            </div>
+                        </div>
+                        <div style="height: 1px;background: #dadada" class="my-3"></div>
+                        <div class="mt-5">
+                            <div class="row mb-3">
+                                <div class="col-lg-12 text-center">
+                                    <a class="btn-task-done btn-warning btn px-3 t-20 text-white text-bold"
+                                       th:href="'tel:' + ${task.getTasker().getPhone()}">
+                                        Liên hệ Tasker: <span th:text="${task.getTasker().getPhone()}"></span>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="text-center my-3 col-lg-12"
+                                 th:if="${task.getStatus() == 1 && task.getTasker().getUser().getLogin() == #authentication.name}">
+                                <button type="submit" class=" btn-task-done btn-reset-css btn-svg-UI fill-green mt-2">
+                                    <svg>
+                                        <rect></rect>
+                                    </svg>
+                                    <span>Xác nhận</span>
+                                </button>
+                            </div>
+                            <div class="text-center my-3 col-lg-12"
+                                 th:if="${task.getStatus() == 2 && task.getMaster().getUser().getLogin() != #authentication.name}">
+                                <span>Vui lòng thông báo để Master biết bạn đã làm xong và xử lý thanh toán</span>
+                            </div>
+                            <div class="text-center my-3 col-lg-12"
+                                 th:if="${task.getStatus() == 2 && task.getMaster().getUser().getLogin() == #authentication.name}">
+                                <button type="submit" class=" btn-task-done btn-reset-css btn-svg-UI fill-green mt-2">
+                                    <svg>
+                                        <rect></rect>
+                                    </svg>
+                                    <span>Thanh toán</span>
                                 </button>
                             </div>
                         </div>
@@ -160,20 +193,5 @@
 </div>
 <th:block th:include="fragment/layout :: javascript"></th:block>
 <script th:src="@{~/js/task/room-task.js}"></script>
-<script src="https://static.chatwee-api.com/v2/script.js"></script>
-<script>
-    document.addEventListener("DOMContentLoaded", function (event) {
-        var chatId = "5def507abd616d5751ed3002";
-        chatweeManager = new ChatweeLib.ChatweeManager(chatId);
-        chatweeManager.SetLocalPrefix("demo6-");
-        chatweeManager.SetChatProperty("desktopLayout", "tabbed");
-        chatweeManager.SetChatProperty("communityEnabled", false);
-        chatweeManager.SetChatProperty("groupChatsEnabled", false);
-
-        chatweeManager.Run();
-
-        //chatweeManager.TriggerConversation("1");
-    });
-</script>
 </body>
 </html>
